Use Double.valueOf and parseDouble, avoid java 9 deprecated constructor.